client/TM_client/static/index.css
body {
  background-color: #f6f8fc;
  padding: 0%;
  margin: 0%;
  font-family:sans-serif

}

html {
  overflow-x: hidden;
  margin-right: calc(-1 * (100vw - 100%));
}

.glass {
  backdrop-filter: blur(7.5px) saturate(180%);
  -webkit-backdrop-filter: blur(16px) saturate(180%);
  background-color: rgba(255, 255, 255, 0.393);
}
.background-gradient1{
  background: #ff97ce;
  background: linear-gradient(90deg, rgba(255,151,206,1) 0%, #94bbe9 100%);
}

.background-gradient2{
  background-color: white;
  /* background: rgb(255,240,248);
  background: linear-gradient(41deg, rgba(255,240,248,1) 0%, rgba(210,230,255,1) 100%);  */
}
.pink-tone:hover{
  color:#f55875 ;
  transition:0.2s
}

